feat: add ML-based pairwise comparison
Signed-off-by: Luca Foppiano <luca@foppiano.org>